--- a/app/views/layouts/verification.slim
+++ b/app/views/layouts/verification.slim
@@ -6,6 +6,7 @@ html
     meta content="width=device-width,initial-scale=1" name="viewport" /
 
     = stylesheet_link_tag "verification"
+    = javascript_include_tag "verification"
 
     = stylesheet_link_tag 'https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css', media: 'all'
     = javascript_include_tag "https://code.jquery.com/jquery-3.3.1.min.js"
