verification legacy external_id show

--- a/app/views/admin/verifications/_header.slim
+++ b/app/views/admin/verifications/_header.slim
@@ -37,4 +37,8 @@
   .col-md-2
     .text-muted= verification.class.human_attribute_name :applicant
     = link_to verification.applicant, admin_applicant_path(verification.applicant)
+    - if verification.object.legacy_external_id.present?
+      = " (#{verification.object.legacy_external_id})"
+    - if verification.object.applicant.legacy_external_id.present?
+      = " (#{verification.object.applicant.legacy_external_id})"
     = render 'admin/applicants/buttons', applicant: verification.applicant
