--- a/app/views/admin/verifications/_document_modal.slim
+++ b/app/views/admin/verifications/_document_modal.slim
@@ -7,6 +7,7 @@
         - if document.video?
           video src="#{document.url}" controls="controls"  style="max-width: 100%;"
       .modal-footer
-        = verification.full_name
-        br
-        = verification.document_number
+        div = verification.full_name
+        div = verification.document_number
+        div =< verification.birth_date
+        div =< t("activerecord.attributes.genders.#{verification.gender}")
