--- a/app/views/admin/verifications/_header.slim
+++ b/app/views/admin/verifications/_header.slim
@@ -40,6 +40,11 @@
   .col-md-2
     .text-muted= verification.class.human_attribute_name :reason
     .badge.badge-info= verification.reason
+    .mt-4
+    .text-muted= verification.class.human_attribute_name :applicant_comment
+    = verification.applicant_comment
+
+
   .col-md-2
     .text-muted= verification.class.human_attribute_name :applicant
     = link_to verification.applicant, admin_applicant_path(verification.applicant)
