--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -33,10 +33,11 @@
           = f.input :reason,
             include_blank: false,
             collection: Verification::REASONS,
-            label_method: lambda { |item| t("attributes.reasons.#{item}") }
+            label_method: lambda { |reason| t(reason, scope: 'attributes.reasons') },
+            input_html: { data: { 'verification-reason': true } }
         .col-6
           = f.input :email, as: :email
-      .row
+      .row[data-applicant-comment]
         .col-12
            = f.input :applicant_comment, as: :text, placeholder: t('.applicant_comment_placeholder')
 
