--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -12,7 +12,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.flex-column.flex-md-row.sticky
           = active_link_to admin_applicants_path, class: 'my-lg-0 py-lg-0 nav-link' do
             = title_with_counter t('.applicants'), current_account.applicants.count
         li.nav-item.mr-2.d-flex.align-items-center
-          = link_to t('.verification_new'), test_new_client_verification_url(short: true), class: 'my-lg-0 py-lg-0 nav-link'
+          = link_to t('.verification_new'), new_operator_verification_path, class: 'my-lg-0 py-lg-0 nav-link'
       ul.navbar-nav.navbar-right
         li.nav-item.dropdown
           = link_to t('.settings'), '#', class: 'my-lg-0 py-lg-0 nav-link dropdown-toggle', data: { toggle: 'dropdown' }, id: :navbarDropdown, role: :button, 'aria-haspopup' => true, 'aria-expanded' => false
