--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,5 +1,5 @@
-.row.justify-content-center.instruction
-  .jumbotron
+.row.justify-content-center.mt-4
+  .jumbotron.col-12
     h1.mb-4 
       = t '.title', account_id: verification.applicant.external_id, org: current_account.public_name
     = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
@@ -8,41 +8,40 @@
           div = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
       .row
       .row
-        .col-4
+        .col-12.col-sm-4
           = f.input :name
-        .col-4
+        .col-12.col-sm-4
           = f.input :last_name
-        .col-4
+        .col-12.col-sm-4
           = f.input :patronymic
       .row
-        .col-4
+        .col-12.col-sm-4
           = f.input :birth_date, as: :date_picker
-        .col-4
+        .col-12.col-sm-4
           = f.input :gender,
                   collection: Verification::GENDERS,
                   label_method: lambda { |item| t("attributes.genders.#{item}") }
 
       .row
-        .col-4
+        .col-12.col-sm-6
           = f.input :country, as: :country,
                   priority: Rails.configuration.application.country_priority
-        .col-4
+        .col-12.col-sm-6
           = f.input :document_number
       .row
-        .col-6
+        .col-12.col-sm-6
           = f.input :reason,
             include_blank: false,
             collection: Verification::REASONS,
             label_method: lambda { |reason| t(reason, scope: 'attributes.reasons') },
             input_html: { data: { 'verification-reason': true } }
-        .col-6
+        .col-12.col-sm-6
           = f.input :email, as: :email
       .row[data-applicant-comment]
         .col-12
            = f.input :applicant_comment, as: :text, placeholder: t('.applicant_comment_placeholder')
-
       .row
-        .col-6
+        .col-12.col-sm-6
           = f.input :documents_cache, as: :hidden
           = f.input :documents,
                      wrapper: :vertical_file,
