--- a/app/views/admin/members/index.html.slim
+++ b/app/views/admin/members/index.html.slim
@@ -14,7 +14,7 @@ table.table.table-striped.table-narrow.table-hover
       tr is='dapi-tr'  data-href=url_for([:admin, member])
         td = member.role
         td = member.user.email
-        td = link_to  admin_member_path(member),  data: { confirm: 'Are you sure?' }, method: :delete do
+        td = link_to  archive_admin_member_path(member),  data: { confirm: 'Are you sure?' }, method: :delete do
               i class="fa fa-trash-o"
     br
 = paginate members
