dev background class

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html lang=I18n.locale
   head
     = render 'shared/head'
-  body
+  body class=dev_background_class
     = render 'shared/navbar'
     - if @container == :fluid
       .container-fluid.px-3.py-3
