--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,5 +24,6 @@ th .sort_link  {
 
 
 .search-navbar input {
-    width: 500px !important;
+    min-width: 500px  !important;
+    max-width: 700px  !important;
 }
