--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,3 +21,9 @@ th .sort_link  {
 .modal-footer {
   justify-content: flex-start;
 }
+
+
+.search-navbar input {
+    min-width: 500px  !important;
+    max-width: 700px  !important;
+}
