--- a/app/views/admin/members/_form.html.slim
+++ b/app/views/admin/members/_form.html.slim
@@ -1,12 +1,7 @@
-= simple_form_for(member, url: admin_members_path) do |f|
-  = f.error_notification
-  = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
+= simple_form_for [:admin, member] do |f|
 
   .form-inputs
-    = f.input :login
-    = f.input :role
-    = f.input :password
-    = f.input :password_confirmation
+    = f.input :role, collection: Member::ROLES
 
   .form-actions
     = f.button :submit, class: 'btn btn-success'
