--- a/app/views/admin/members/new.html.slim
+++ b/app/views/admin/members/new.html.slim
@@ -1,4 +1,5 @@
-h1 New member
-== render partial: 'form', locals: {member: member}
 
-= link_to 'Back', admin_members_path
+
+.container
+  == render partial: 'form', locals: {member: member}
+
