Add verification ID to letter

--- a/app/views/verification_mailer/confirmed.slim
+++ b/app/views/verification_mailer/confirmed.slim
@@ -1,3 +1,5 @@
 h2 Добрый день!
 
+p Номер заявки ##{@verification.id}
+
 p Уважаемый #{@verification.last_name} #{@verification.name}, вы успешно прошли верификацию у #{@account.name}.
