--- a/app/views/verification_mailer/refused.slim
+++ b/app/views/verification_mailer/refused.slim
@@ -1,5 +1,7 @@
 h2 Добрый день!
 
+p Номер заявки ##{@verification.id}
+
 p Уважаемый #{@verification.last_name} #{@verification.name}, вы не прошли верификацию у #{@account.name}.
 
 p Комментарий:
