--- a/app/views/admin/members/_form.slim
+++ b/app/views/admin/members/_form.slim
@@ -1,7 +1,7 @@
 = simple_form_for [:admin, member] do |f|
 
   .form-inputs
-    = f.input :role, collection: Member::ROLES
+    = f.input :role, collection: Member::ROLES, include_blank: false
 
   .form-actions
     = f.button :submit, class: 'btn btn-success'
