--- a/app/views/operator/verifications/new.slim
+++ b/app/views/operator/verifications/new.slim
@@ -1,5 +1,5 @@
 .container
   = simple_form_for :verification, url: operator_verifications_url, method: :post do |f|
-    = f.input :external_id, as: :string, label: 'External ID (внешний ID пользователя)'
+    = f.input :external_id, as: :string, label: 'External ID (внешний ID пользователя)', required: true
     .mt-4
     = f.submit 'Создать тестовую заявку'
