--- a/app/views/admin/members/_form.slim
+++ b/app/views/admin/members/_form.slim
@@ -1,7 +1,7 @@
-= simple_form_for [:admin, member] do |f|
+= simple_form_for(member, url: admin_member_path) do |f|
 
   .form-inputs
     = f.input :role, collection: Member::ROLES, include_blank: false
 
   .form-actions
-    = f.button :submit, class: 'btn btn-success'
+    = f.button :submit, 'Сохранить', class: 'btn btn-success'
