Minor change member update

--- a/app/views/admin/members/edit.slim
+++ b/app/views/admin/members/edit.slim
@@ -1,3 +1,2 @@
 .container
-  = render 'attributes', item: member
-  = render partial:'form', locals: {member: member}
+  = render :form, locals: {member: member}
