--- a/app/views/admin/members/_form.slim
+++ b/app/views/admin/members/_form.slim
@@ -1,6 +1,7 @@
 = simple_form_for(member, url: admin_member_path) do |f|
 
   .form-inputs
+    = f.input :label, disabled: true
     = f.input :role, collection: Member::ROLES, include_blank: false
 
   .form-actions
