Change role from index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,3 +28,24 @@ th .sort_link  {
     min-width: 500px  !important;
     max-width: 700px  !important;
 }
+
+code {
+  color: inherit;
+}
+
+.table-narrow {
+  width: auto;
+}
+
+.table thead th {
+  vertical-align: top;
+}
+
+.text-muted {
+  opacity: 0.8;
+  color: inherit !important;
+}
+
+.text-small {
+  font-size: 80%;
+}
