--- a/app/views/shared/_head.slim
+++ b/app/views/shared/_head.slim
@@ -8,6 +8,8 @@ meta content="width=device-width,initial-scale=1" name="viewport" /
 = javascript_include_tag '//unpkg.com/@ungap/custom-elements'
 = stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
 = javascript_include_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'
+= javascript_include_tag  src="js/noty/packaged/jquery.noty.packaged.min.js"
+
 
 = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 = javascript_include_tag "application", 'data-turbolinks-track': 'reload'
