--- a/app/views/shared/_head.slim
+++ b/app/views/shared/_head.slim
@@ -8,7 +8,7 @@ meta content="width=device-width,initial-scale=1" name="viewport" /
 = javascript_include_tag '//unpkg.com/@ungap/custom-elements'
 = stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
 = javascript_include_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'
-= javascript_include_tag  src="js/noty/packaged/jquery.noty.packaged.min.js"
+= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js'
 
 
 = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
