operator statistics fix

--- a/app/views/admin/operator_statistics/show.slim
+++ b/app/views/admin/operator_statistics/show.slim
@@ -3,14 +3,15 @@ h2 Статистика операторов
 ul.nav.nav-pills.mb-3
   - Member::STATISTICS_PERIODS.each do |period|
     li.nav-item
-      = active_link_to duration_of_interval_in_words(period.to_i), admin_admin_statistics_path(period: period.to_i), class: 'nav-link', active: :exact
+      = active_link_to duration_of_interval_in_words(period.to_i), admin_operator_statistics_path(period: period.to_i), class: 'nav-link', active: :exact
   li.nav-item
-    = active_link_to 'Все время', admin_admin_statistics_path, class: 'nav-link', active: :exact
+    = active_link_to 'Все время', admin_operator_statistics_path, class: 'nav-link', active: :exact
 
 table.table.table-striped.table-hover.table-narrow
   thead.thead-dark
     tr
       th Оператор
+      th Количество
       th Минимальное время
       th Среднее время
       th Максимальное время
@@ -18,6 +19,7 @@ table.table.table-striped.table-hover.table-narrow
   - members.each do |member|
     tr
       td= member.user.email
+      td= member.verifications_amount
       td= duration_of_interval_in_words(member.min_period)
       td= duration_of_interval_in_words(member.avg_period)
       td= duration_of_interval_in_words(member.max_period)
