--- a/app/views/admin/log_records/_table.slim
+++ b/app/views/admin/log_records/_table.slim
@@ -1,5 +1,5 @@
-table.table.table-striped.table-hover.table-narrow.table-sm
-  thead.thead-light
+table.table.table-striped.table-hover.table-narrow
+  thead.thead-dark
     tr
       th= t('activerecord.attributes.log_record.action')
       th= t('activerecord.attributes.log_record.verification')
@@ -8,7 +8,7 @@ table.table.table-striped.table-hover.table-narrow.table-sm
       th= t('activerecord.attributes.log_record.moderator_id')
       th= t('activerecord.attributes.log_record.created_at')
   tbody
-    - log_records.ordered.each do |log_record|
+    - items.each do |log_record|
       tr
         td= t "activerecord.attributes.log_record.actions.#{log_record.action}"
         - if log_record.verification.present?
@@ -19,4 +19,4 @@ table.table.table-striped.table-hover.table-narrow.table-sm
           td colspan=3
             = middot
         td= log_record.member
-        td= l log_record.created_at, format: :long
+        td= log_record.created_at
