--- a/app/views/admin/members/index.slim
+++ b/app/views/admin/members/index.slim
@@ -1,5 +1,14 @@
 .container
   h1 Пользователи
+  h2 Пригласить
+
+  = simple_form_for form, url: admin_members_url do |f|
+    = f.error_notification
+    = f.input :emails, as: :text, autofocus: true, input_html: { rows: 5, autosize: true }, label: 'Список email построчно'
+
+    = f.button :submit, class: 'btn-primary', data: { enableWhenChanged: true, disable_with: t('helpers.disable_with') }, value: 'Пригласить'
+  hr
+  h2 Текущие пользователи
   hr
   div.mb-2= t 'application.index.total_records', count: members.count
   table.table.table-striped.table-hover
@@ -20,16 +29,7 @@
       br
   = paginate members
 
-  hr
-  h2 Существующие приглашения
-  = render 'invited', invites: invited
-
-  hr
-  h2 Создание приглашений
-
-
-  = simple_form_for form, url: admin_members_url do |f|
-    = f.error_notification
-    = f.input :emails, as: :text, autofocus: true, input_html: { rows: 5, autosize: true }
-
-    = f.button :submit, class: 'btn-primary', data: { enableWhenChanged: true, disable_with: t('helpers.disable_with') }
+  - if invited.any?
+    hr
+    h2 Не принятые приглашения
+    = render 'invited', invites: invited
