--- a/app/views/admin/dashboard/_reason_filter.slim
+++ b/app/views/admin/dashboard/_reason_filter.slim
@@ -3,9 +3,13 @@ ul.nav.nav-pills.mb-3
   - Verification::REASONS.each do |reason|
     -url = admin_root_path(q: request.query_parameters.fetch(:q, {}).merge(reason_eq: reason))
     - klass = active_class('nav-link', status_from_query == reason.to_s)
+    - count = statused_verifications.member_scope(current_member).by_reason(reason).count
+    - if count > 0
+      li.nav-item
+        = link_to url, class: klass do
+          = title_with_counter t("reason.#{reason}"), count
+  - count_all = current_account.verifications.member_scope(current_member).count
+  - if count_all > 0
     li.nav-item
-      = link_to url, class: klass do
-        = title_with_counter t("reason.#{reason}"), statused_verifications.member_scope(current_member).by_reason(reason).count
-  li.nav-item
-    = link_to admin_root_path(q: request.query_parameters.fetch(:q, {}).except(:reason_eq)), class: active_class('nav-link', status_from_query.nil?) do
-      = title_with_counter t('reason.all'), current_account.verifications.member_scope(current_member).count
+      = link_to admin_root_path(q: request.query_parameters.fetch(:q, {}).except(:reason_eq)), class: active_class('nav-link', status_from_query.nil?) do
+        = title_with_counter t('reason.all'), count_all if count_all
