--- a/app/views/admin/dashboard/index.slim
+++ b/app/views/admin/dashboard/index.slim
@@ -1,2 +1,6 @@
-h2 Заявки требующие внимания
-= render 'table', items: current_account.verifications.pending.order('created_at desc').limit(10).decorate
+h1 Заявки требующие внимания
+= render 'index_form'
+-scoped_paginated_records = paginated_records.member_scope(current_member)
+div.mb-2= t 'application.index.total_records', count: scoped_paginated_records.total_count
+= render 'table', items: scoped_paginated_records.decorate if scoped_paginated_records.count.positive?
+= paginate scoped_paginated_records
