--- a/app/views/admin/dashboard/index.slim
+++ b/app/views/admin/dashboard/index.slim
@@ -1,5 +1,6 @@
 h1 Заявки требующие внимания
-= render 'index_form'
+.mb-4= render 'reason_filter', pending_verifications: pending_verifications
+
 div.mb-2= t 'application.index.total_records', count: paginated_records.total_count
 = render 'table', items: paginated_records.decorate if paginated_records.count.positive?
 = paginate paginated_records
