[#182261611] removing empty applicants creation on new verification

--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -1,11 +1,11 @@
 .row.justify-content-center.mt-4
   .jumbotron.col-12
-    h1.mb-4 
+    h1.mb-4
       = t '.title', account_id: verification.applicant.external_id, org: current_account.public_name
     .row.mt-4
       .col-md-12
         .alert.alert-warning role='alert'
-          = raw verification.account.form_description_interpolated
+          = raw verification.applicant.account.form_description_interpolated
     = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
       .row
         .col-md-12
