--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -45,6 +45,8 @@
         .col-12
            = f.input :applicant_comment, as: :text, placeholder: t('.applicant_comment_placeholder')
       .row
+        = render partial: 'client/verifications/verification_documents/fields', locals: {verification: verification, f: f}
+      .row
         .col-12.col-sm-6
           = f.input :documents_cache, as: :hidden
           = f.input :documents,
