--- a/app/views/admin/accounts/show.html.slim
+++ b/app/views/admin/accounts/show.html.slim
@@ -55,9 +55,11 @@ br
         = simple_form_for :data, url: verification_callback_test_admin_account_path, html: { id: "verification_callback_form" }, remote: true do |f|
           = f.input :external_id, input_html: { value: '123' }, label: :external_id, required: true
           = f.input :applicant_id, input_html: { value: '1' }, label: :applicant_id, required: true
-          = f.input :verification_id, input_html: { value: '1' }, label: :verification_id, required: true
           = f.input :email, input_html: { value: 'test@test.test' }, label: :email, required: true
+          = f.input :verification_id, input_html: { value: '1' }, label: :verification_id, required: true
           = f.input :status, collection: Verification::STATUSES, label: :status, selected: Verification::STATUSES.first, include_blank: false
+          = f.input :reason, input_html: { value: 'Bad photo' }
+          = f.input :time, input_html: { value: Time.current.to_s(:iso8601) }
 
           = f.button :submit, class: 'btn btn-success', value: t('.send')
       .card-footer#verification_callback_result
@@ -73,9 +75,11 @@ br
           br
           |
             {
-              external_id: "123"      # Внешний ID аккаунт проходящего верификацию
-              applicant_id: 1         # ID апликанта в Агнесса
-              verification_id: 22     # ID заявки
-              email: "test@test.test" # Email пользователя из заявки
-              status: "pending"       # Статус заявки, возможные status: #{Verification::STATUSES}
+              external_id: "123",             # Внешний ID аккаунт проходящего верификацию
+              applicant_id: 1,                # ID апликанта в Агнесса
+              email: "test@test.test",        # Email пользователя из заявки
+              verification_id: 22,            # ID заявки
+              status: "pending",              # Статус заявки, возможные status: #{Verification::STATUSES}
+              reason: "bad photo",            # Причина отклонения заявки
+              time: "2022-05-26T12:15:47Z"    # Время в формате iso8601
             }
